# mnist-ffnn

./: CMakeLists.txt  LICENSE  README.md  mnist_ffnn.cu  mnist_ffnn_v2.cu  mnist_macros.h  nn_kernels.cu  nn_kernels.h  nn_layer.h  read_mnist.cpp  read_mnist.h  utils.cpp  utils.h
mnist_ffnn_cpp/: main.cpp  mnist_ffnn.hpp  nn.cpp  nn.h  nn_linalg.cpp  nn_linalg.h  read_mnist.cpp  read_mnist.h
